Fixed pull request comment issue
