# swagger.yaml
@@ -71,23 +71,6 @@ paths:
         "500": *a3
       tags: *a4
       security: *a5
-  "/v1/prescriptions/{id}":
-    get:
-      operationId: PrescriptionsController_findPrescriptionDetails
-      parameters:
-        - name: id
-          required: true
-          in: path
-          schema:
-            type: string
-      responses:
-        "200":
-          description: ""
-        "400": *a1
-        "403": *a2
-        "500": *a3
-      tags: *a4
-      security: *a5
   "/v1/prescriptions/{nhi}/{id}":
     put:
       operationId: update-prescription
@@ -134,12 +117,12 @@ info:
   version: "1.0"
   contact:
     name: FHIR
-    url: http://localhost:1001/api
+    url: null
     email: neblar.support@gmail.com
-  termsOfService: http://localhost:1001/api
+  termsOfService: null
   license:
-    name: Privacy Policy
-    url: http://localhost:1001/api
+    ? name
+    ? url
 tags: []
 servers:
   - url: http://localhost:1001/api
@@ -220,7 +203,7 @@ components:
         date:
           format: date-time
           type: string
-          example: 2024-01-08T10:09:44.893Z
+          example: 2024-01-08T11:29:03.884Z
         medications:
           example:
             &a7
@@ -277,7 +260,7 @@ components:
         date:
           format: date-time
           type: string
-          example: 2024-01-08T10:09:44.893Z
+          example: 2024-01-08T11:29:03.884Z
         medications:
           example: *a7
           type: array
@@ -307,5 +290,5 @@ components:
           items:
             $ref: "#/components/schemas/PrescriptionSave"
 externalDocs:
-  description: Find out more
+  description: null
   url: http://localhost:1001/api
